--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,12 @@ src/parser.out
 src/parsetab.py
 src/pydot_graph.png
 src/test.c
+src/test.py
 src/a
 src/a.out
 *.dot
 *.out
 *.png
 src/debug.txt
+symbol_table_output.json
+src/symbol_table_output.json
