--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ src/test.c
 src/test.py
 src/a
 src/a.out
+**/*.dot
+**/*.out
+**/*.png
+**/*.o
 *.dot
 *.out
 *.png
@@ -19,7 +23,8 @@ src/symbol_table_output.json
 graph1.dot
 pydot_graph.png
 out.asm
-src/out.asm
+**/out.asm
+scripts/*.o
 debug.txt
 new.c
 pydot_graph.png
